--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
             их&nbsp;от­сутс­твие) наш­ли вер­ное при­мене­ние,&nbsp;— и&nbsp;это пра­виль­но.</p>
         </div>
       </div>
+      <div id="runeCalcResultRunes" style="display: none;">
+        <h2>Руна Сущности:</h2>
+        <div id="essenceRune"></div>
+        <h2>Руна Личности:</h2>
+        <div id="personalityRune"></div>
+        <h2>Золотая Руна:</h2>
+        <div id="goldenRune"></div>
+      </div>
     </div>
   </div>
 </body>
@@ -159,9 +167,9 @@
       padding-bottom: 1rem;
     }
 
-    .spoiler:not(:last-child) {
+    /* .spoiler:not(:last-child) {
       border-bottom: 1px solid;
-    }
+    } */
 
     .spoiler__intro {
       position: relative;
@@ -236,20 +244,21 @@
     rcForm.addEventListener('submit', () => {
       event.preventDefault();
 
-      const birthDate = rcForm.querySelector('#rc_date').value;
       const name = rcForm.querySelector('#rc_imya').value;
       const surname = rcForm.querySelector('#rc_familiya').value;
       const patronymic = rcForm.querySelector('#rc_otchestvo').value;
+      const birthDate = rcForm.querySelector('#rc_date').value;
+      const [birthYear, birthMonth, birthDay] = birthDate.split('-');
 
       function isCyrillic(input) {
         const cyrillicPattern = /^[А-ЯЁа-яё]+$/;
         return cyrillicPattern.test(input);
       }
 
-      // if (!isCyrillic(name) || !isCyrillic(surname) || (patronymic && !isCyrillic(patronymic))) {
-      //   alert("Пожалуйста, вводите только кириллические символы.");
-      //   return false; // Предотвращаем отправку формы
-      // }
+      if (!isCyrillic(name) || !isCyrillic(surname) || (patronymic && !isCyrillic(patronymic))) {
+        alert("Пожалуйста, вводите только кириллические символы.");
+        return false; // Предотвращаем отправку формы
+      }
 
       // получаем суммы цифр в числе
       function getDigitSum(num) {
@@ -257,7 +266,7 @@
         while (num > 9) {
           num = num.toString().split('').reduce((acc, digit) => acc + parseInt(digit), 0);
         }
-        return num
+        return +num
       }
       // console.log(getDigitSum('1991-04-29'));
 
@@ -275,28 +284,36 @@
       }
       // console.log(getTernaryValue(46));
 
-      // Руна Сущности
+      // ищем совпадение значений или возвращаем null
+      function checkMatch(first, second, third) {
+        if (first === second && second === third) {
+          return first;
+        }
+        if (first === second || first === third) {
+          return first;
+        }
+        if (second === third) {
+          return second;
+        }
+        return null;
+      }
+      // console.log(checkMatch(1,2,1));
+
+      // РУНА СУЩНОСТИ
       function getEssenceRune() {
-        // определяем руническую группу (1-8 или 1-9 ???)
-        const runeGroup = getDigitSum(birthDate);
-        // console.log(`Руническая группа: ${runeGroup}`);
-        // определяем этт (1-3)
-        const [year, month, day] = birthDate.split('-');
-        const dayNumber = getTernaryValue(day);
-        const monthNumber = getTernaryValue(month);
-        const yearNumber = getTernaryValue(year);
-        // console.log(year);
-        // console.log(dayNumber, monthNumber, yearNumber);
         return {
-          'runeGroup': runeGroup,
-          'att': null
+          'group': getDigitSum(birthDate),
+          'att': checkMatch(getTernaryValue(birthDay), getTernaryValue(birthMonth), getTernaryValue(birthYear)) || getTernaryValue(getDigitSum(birthDate)),
+          'dayNumber': getDigitSum(birthDay),
+          'monthNumber': getDigitSum(birthMonth),
+          'yearNumber': getDigitSum(birthYear),
         }
       }
       console.log(`Руна Сущности:`);
       console.log(getEssenceRune());
 
 
-      // Руна Личности
+      // РУНА ЛИЧНОСТИ
       function getPersonalityRune() {
         const letterValues = {
           'А': 1, 'И': 1, 'С': 1, 'Ъ': 1,
@@ -328,15 +345,39 @@
           return getDigitSum(sum);
         }
         return {
-          'runeGroup': getPersonalityNumber([name, surname, patronymic]),
-          'att': null
+          'group': getPersonalityNumber([name, surname, patronymic]),
+          'att': checkMatch(name, surname, patronymic) || getTernaryValue(getDigitSum(birthDate)),
+          'nameNumber': getNameNumber(name),
+          'surnameNumber': getNameNumber(surname),
+          'patronymicNumber': getNameNumber(patronymic)
         }
       }
       console.log(`Руна Личности:`);
       console.log(getPersonalityRune());
 
+      // ЗОЛОТАЯ РУНА
+      function getGoldenRune() {
+        const essenceRune = getEssenceRune();
+        const personalityRune = getPersonalityRune();
+        const dayPlusName = essenceRune.dayNumber + personalityRune.nameNumber;
+        const monthPlusPatronymic = essenceRune.monthNumber + personalityRune.patronymicNumber;
+        const yearPlusSurname = essenceRune.yearNumber + personalityRune.surnameNumber;
 
+        return {
+          'group': getDigitSum(essenceRune.group + personalityRune.group),
+          'att': checkMatch(getTernaryValue(dayPlusName), getTernaryValue(monthPlusPatronymic), getTernaryValue(yearPlusSurname)) || getDigitSum(essenceRune.group + personalityRune.group),
+          'dayPlusName': dayPlusName,
+          'monthPlusPatronymic': monthPlusPatronymic,
+          'yearPlusSurname': yearPlusSurname
+        }
+      }
+      console.log(`Золотая Руна:`);
+      console.log(getGoldenRune());
 
+      document.querySelector('#essenceRune').innerHTML = `Руническая группа: <b>${getEssenceRune().group}</b><br>Атт: <b>${getEssenceRune().att}</b>`;
+      document.querySelector('#personalityRune').innerHTML = `Руническая группа: <b>${getPersonalityRune().group}</b><br>Атт: <b>${getPersonalityRune().att}</b>`;
+      document.querySelector('#goldenRune').innerHTML = `Руническая группа: <b>${getGoldenRune().group}</b><br>Атт: <b>${getGoldenRune().att}</b>`;
+      document.querySelector('#runeCalcResultRunes').style.display = 'block';
 
     })
   })
