add eng letters

--- a/index.html
+++ b/index.html
@@ -303,13 +303,11 @@
       }
 
       if (language === "ru") {
-        // Если выбран русский язык, проверяем, что введен только текст на кириллице
         if (!isCyrillic(name) || !isCyrillic(surname)) {
           alert("Пожалуйста, вводите имя и фамилию на кириллице.");
           return false;
         }
       } else if (language === "en") {
-        // Если выбран английский язык, проверяем, что введен только текст на латинице
         if (!isLatin(name) || !isLatin(surname)) {
           alert("Please enter your first and last name in Latin characters.");
           return false;
@@ -371,17 +369,32 @@
 
       // РУНА ЛИЧНОСТИ
       function getPersonalityRune() {
-        const letterValues = {
-          'А': 1, 'И': 1, 'С': 1, 'Ъ': 1,
-          'Б': 2, 'Й': 2, 'Т': 2, 'Ы': 2,
-          'В': 3, 'К': 3, 'У': 3, 'Ь': 3,
-          'Г': 4, 'Л': 4, 'Ф': 4, 'Э': 4,
-          'Д': 5, 'М': 5, 'Х': 5, 'Ю': 5,
-          'Е': 6, 'Н': 6, 'Ц': 6, 'Я': 6,
-          'Ё': 7, 'О': 7, 'Ч': 7,
-          'Ж': 8, 'П': 8, 'Ш': 8,
-          'З': 9, 'Р': 9, 'Щ': 9
-        };
+        let letterValues = null
+        if (language === "ru") {
+          letterValues = {
+            'А': 1, 'И': 1, 'С': 1, 'Ъ': 1,
+            'Б': 2, 'Й': 2, 'Т': 2, 'Ы': 2,
+            'В': 3, 'К': 3, 'У': 3, 'Ь': 3,
+            'Г': 4, 'Л': 4, 'Ф': 4, 'Э': 4,
+            'Д': 5, 'М': 5, 'Х': 5, 'Ю': 5,
+            'Е': 6, 'Н': 6, 'Ц': 6, 'Я': 6,
+            'Ё': 7, 'О': 7, 'Ч': 7,
+            'Ж': 8, 'П': 8, 'Ш': 8,
+            'З': 9, 'Р': 9, 'Щ': 9
+          };
+        } else if (language === "en") {
+          letterValues = {
+            'A': 1, 'J': 1, 'S': 1,
+            'B': 2, 'K': 2, 'T': 2,
+            'C': 3, 'L': 3, 'U': 3,
+            'D': 4, 'M': 4, 'V': 4,
+            'E': 5, 'N': 5, 'W': 5,
+            'F': 6, 'O': 6, 'X': 6,
+            'G': 7, 'P': 7, 'Y': 7,
+            'H': 8, 'Q': 8, 'Z': 8,
+            'I': 9, 'R': 9
+          };
+        }
         function getNameNumber(name) {
           const upperName = name.toUpperCase().replace(/\s+/g, '');
           let sum = 0;
