--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Онлайн-калькулятор расчёта индивидуального рунического кода (ИРК)</title>
+
+	<!-- FONTS -->
+	<link href="https://fonts.cdnfonts.com/css/neutral-face" rel="stylesheet">
+	<link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
+	<!-- ./FONTS -->
+
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 	<header class="rune-header">
 		<div class="container">
+			<div class="badge">Бесплатно</div>
 			<h1>Онлайн - калькулятор <span>расчета рунокода</span></h1>
+			<div class="rune-header-img relative">
+				<img src="img/header-bg.webp" srcset="img/header-bg@2x.webp 2x" alt="ALT">
+				<a href="javascript:void(0)" class="rune-header-btn">Рассчитать</a>
+			</div>
+			<div class="rune-header-text">
+				<p>На калькуляторе можно рассчитать рунокод (индивидуальный рунический код, персональный рунический код) на основных мировых языках. Для расчеты необходимы точные данные: дата рождения: день, месяц, год (время рождения не нужно).</p>
+				<p>Имя, фамилия, отчество (при наличии) - как указано в основном документе (паспорт, свидетельство о рождении) той страны, где вы проживаете и/или ведете основную деятельность. Если вы планируете смену имени/фамилии или гражданства, вы можете проверить, как изменится ваш рунокод во второй и третьей позициях, что будет отражать смену способа реализации данных вам при рождении качеств и результатов, к которым нужно стремиться.</p>
+			</div>
 		</div>
 	</header>
 </body>
