--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header class="rune-header">
 		<div class="container">
 			<div class="badge">Бесплатно</div>
-			<h1>Онлайн - калькулятор <span>расчета рунокода</span></h1>
+			<h1>Онлайн - калькулятор <span><span>расчета рунокода</span></span></h1>
 			<div class="rune-header-img relative">
 				<img src="img/header-bg.webp" srcset="img/header-bg@2x.webp 2x" alt="ALT">
 				<a href="#runeCalcForm" class="rune-header-btn">Рассчитать</a>
