--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 	<main>
 
 		<section class="run-calc-section" id="runeCalcSection">
-			<img src="img/smoke.png" srcset="img/smoke@2x.png 2x" class="run-calc-section-bg" />
+
+			<img src="img/smoke.webp" srcset="img/smoke@2x.webp 2x" class="run-calc-section-bg" />
 			<div class="container">
 				<form class="run-calc-form" id="runeCalcForm">
 					<div class="run-form-group">
@@ -58,11 +59,31 @@
 						<input type="text" placeholder="Иванович" name="rc_otchestvo" id="rc_otchestvo">
 					</div>					
 					<button type="submit" class="btn">Рассчитать</button>
-
 					<span class="agree">Нажимая на кнопку «Рассчитать», Вы даете согласие на <a href="#">обработку персональных данных</a> и соглашаетесь с <a href="#">политикой конфиденциальности</a>.</span>
-
 				</form>
+
+				<h2>Индивидуальный Рунический <span><span>Код состопт из трех рун:</span></span></h2>
+
+				<div class="circle-wrapper">
+					<div class="circle">
+						<div class="circle-logo">
+							<img src="img/circle-logo.png" alt="ALT">
+						</div>
+						<div class="label top">Руна Судьбы</div>
+						<div class="label right">Руна Успеха</div>
+						<div class="label bottom">Руна Личности</div>
+						<div class="dot dot-1"></div>
+						<div class="dot dot-2"></div>
+						<div class="dot dot-3"></div>
+					</div>
+				</div>
+
+				<div class="run-calc-section-with-img">
+					<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
+				</div>
+
 			</div>
+
 		</section>
 
 	</main>
