run-calc-section-descr

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<span class="agree">Нажимая на кнопку «Рассчитать», Вы даете согласие на <a href="#">обработку персональных данных</a> и соглашаетесь с <a href="#">политикой конфиденциальности</a>.</span>
 				</form>
 
-				<h2>Индивидуальный Рунический <span><span>Код состопт из трех рун:</span></span></h2>
+				<h2>Индивидуальный Рунический <span><span>Код состоит из трех рун:</span></span></h2>
 
 				<div class="circle-wrapper">
 					<div class="circle">
@@ -78,13 +78,51 @@
 					</div>
 				</div>
 
-				<div class="run-calc-section-with-img">
-					<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
+				<div id="runeCalcAbout">
+
+					<div class="run-calc-section-with-img">
+						<div class="run-calc-section-text-block first-text-block">
+							<p>В основе расчетов рунокода лежит нумерологическая система соответствия чисел и букв знакам рунического алфавита.</p>
+							<p>Рунокод состоит из трех рун и рассматривается как единая формула: руны в рунокоде не являются отдельными элементами, их значения трактуются с пониманием причинно-следственных связей рун в рунокоде и в футарке, а также с учетом позиции каждой руны.</p>
+						</div>
+						<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
+						<div class="run-calc-section-text-block last-text-block">
+							<p>Пустые руны в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
+							</p>
+						</div>
+					</div>
+
+					<div class="run-calc-section-descr">
+
+						<div class="run-calc-section-descr-item">
+							<h3>Первая позиция в рунокоде</h3>
+							<em>руна судьбы, руна рождения, руна <br/>исходных данных</em>
+							<p>Определяется по данным рождения человека. Отражает опыт души в предыдущих воплощениях и неизменные качества, которые человек имеет по праву рождения.</p>
+						</div>
+
+						<div class="run-calc-section-descr-item">
+							<h3>Вторая позиция в рунокоде</h3>
+							<em>руна личности, руна реализации</em>
+							<p>Определяется по социальному имени и фамилии, отражает качества и способности, которые необходимо развивать для реализации задач, связанных с ролью человека в мире, показывает, как и через что человек строит отношения с вирдом, событийным полем.</p>
+						</div>
+
+						<div class="run-calc-section-descr-item">
+							<h3>Третья позиция в рунокоде</h3>
+							<em>руна успеха, руна результата</em>
+							<p>Определяется на основе сочетания значений первых двух рун. Указывает на итог, результат, смысл, к которому человек должен стремиться, опираясь на качества первых рун. Отражает ценность человека для мира - какое качество будет ассоциироваться с результатами деятельности, что останется наследием.</p>
+						</div>
+
+					</div>
+					<!-- /.run-calc-section-descr -->
+
 				</div>
+				<!-- /#runeCalcAbout -->
 
 			</div>
 
 		</section>
+
+		123
 
 	</main>
 
