upd run-calc-section-descr mobile

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 
 					<div class="run-calc-section-descr">
 
+						<p class="run-calc-section-descr-title">Три руны символизируют судьбоносные жизненные<br/> параметры (константы), как основу личного вирда.</p>
+
 						<div class="run-calc-section-descr-item">
 							<h3>Первая позиция в рунокоде</h3>
 							<em>руна судьбы, руна рождения, руна <br/>исходных данных</em>
