run-calc-section-descr-end

--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
 					</div>
 					<!-- /.run-calc-section-descr -->
 
+					<div class="run-calc-section-descr-end">
+						<img src="img/run-bg.webp" srcset="img/run-bg@2x.webp 2x" alt="ALT">
+						<div class="text-block">
+							<p>Рунокод может изменяться при смене имени, фамилии, гражданства, при официальном переходе в другую языковую систему. Принимая решение о смене социального аватара и его словесно-цифровых кодов, проверяйте, как будет меняться ваш рунокод: это поможет подготовиться к трансформации и соотнести новые вызовы и задачи с вашими желаниями и возможностями.</p>
+							<p>В редких случаях рунокод не меняется при смене данных. Это вариант нормы, он говорит о фиксированной роли человека и проживании личной судьбы на данном этапе жизни.</p>
+						</div>
+					</div>
+
 				</div>
 				<!-- /#runeCalcAbout -->
 
