--- a/index.html
+++ b/index.html
@@ -132,9 +132,43 @@
 
 		</section>
 
-		123
-
 	</main>
+
+	<footer class="run-footer">
+		<div class="container">
+			<div class="run-footer-wrapper">
+				<div class="run-footer-left">
+					<img src="img/logo.jpg" srcset="img/logo@2x.jpg 2x" class="run-footer-logo" alt="ALT">
+					<div class="run-footer-info">
+						<p>ИП Север Александр Сергеевич</p>
+						<p>ИНН: 712400751970</p>
+						<p>ОГРНИП: 318715400011223</p>
+					</div>
+					<a href="mailto:sever.land.runa@gmail.com" class="run-footer-email">sever.land.runa@gmail.com</a>
+					<div class="run-footer-links">
+						<a href="#">Публичная оферта</a>
+						<a href="#">Политика конфиденциальности</a>
+					</div>
+				</div>
+				<div class="run-footer-right">
+					<div class="run-footer-socials">
+						<a href="#" class="run-footer-socials-link">
+							<img src="img/icons/telegram.svg" alt="Telegram">
+						</a>
+						<a href="#" class="run-footer-socials-link">
+							<img src="img/icons/vkontakte.svg" alt="VK">
+						</a>
+						<a href="#" class="run-footer-socials-link">
+							<img src="img/icons/youtube.svg" alt="YouTube">
+						</a>
+						<a href="#" class="run-footer-socials-link">
+							<img src="img/icons/4.svg" alt="HZ">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 </body>
 </html>
