--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</div>
 				</div>
 
-				<div id="runeCalcAbout" style="display: none;">
+				<div id="runeCalcAbout">
 
 					<div class="rune-calc-section-with-img">
 						<div class="rune-calc-section-text-block first-text-block">
@@ -128,6 +128,50 @@
 				</div>
 				<!-- /#runeCalcAbout -->
 
+				<div id="runeCalcResult" class="rune-calc-result" style="display: none;">
+					<div id="runeCalcResultRunes">
+					  <div class="spoiler">
+							<div class="spoiler__intro">
+								<h3 class="spoiler__btn">
+									<span>Общее описание</span>
+									<img src="img/icons/arrow-up.svg" />
+								</h3>
+							</div>
+							<div class="spoiler__content">
+								<h4>Руна судьбы</h4>
+								<p>Это та карма, которую каждый принёс из прошлого воплощения. Скопленный и сохранённый опыт; это то, что человек достиг, достиг сам проживанием своей судьбы во всех предыдущих своих рождениях. Это то, что реально принадлежит ему по праву. Руна Судьбы не имеет никакого отношения к роду и семье, это только личное — то, что уже было наработано.</p>
+								<p>Руна Судьбы — это данность, изменить которую не дано никому. Норны ткут один раз.</p>
+
+								<h4>Руна личности</h4>
+								<p>Основа Руны Личности — это социальное имя, которое в настоящую эпоху человек может менять так, как ему заблагорассудится. Что невозможно было бы в стародавние времена, когда имя отображало характер человека, его богов-покровителей и, конечно же, кровь — принадлежность к какому-то роду-племени. Иногда в имени кодировалась и принадлежность к месту, что в мистике имянаречения тоже не является случайным фактором.</p>
+								<p>Теперь же социальное имя изменчиво и переменчиво и, как следствие (а может быть, не следствие, а наоборот — программная причина), изменчивой и переменчивой становится и Руна Личности. Помня, что эта руна отображает ТЗ человека на данное воплощение, отображает некие личностные качества, которые необходимо наработать или приобрести, видим, что в настоящую эпоху у человека есть такое право — менять своё ТЗ, перепрограммировать свою судьбу как отображаемый сценарий жизненного пути. У человека есть право иначе расставить акценты личности, проявить или спрятать свою натуру и, как следствие, реализоваться в совсем иных результатах. Но, подчеркну, всё это ему доступно только в мире людей, только в пространстве социальных игр. В анналах «Книги Судеб», в узорах полотна Норн его линия неизменна, а смена личности — это не смена узора на полотне реальности, а просто окрашивание этого узора в иные оттенки.</p>
+								<h4>Руна успеха</h4>
+								<p>Итоговая руна результата. Описывает тот след, тот отпечаток вашего сознания, вашей личности и жизни, который ожидаем от вас в данной реальности. Это то, что делается не для себя, а то, что останется после вас. Как доказательство, что программа судьбы была понята и отработана полно и с ожидаемым результатом, что природные дары (или их отсутствие) нашли верное применение, — и это правильно.</p>
+							</div>
+					  </div>
+						<div id="runesWrapper" class="runes-wrapper">
+							<div class="runes-item">
+								<h4>Руна Судьбы:</h4>
+								<div id="essenceRune"></div>
+							</div>
+							<div class="runes-item">
+								<h4>Руна Личности:</h4>
+								<div id="personalityRune"></div>
+							</div>
+							<div class="runes-item">
+								<h4>Руна Успеха:</h4>
+								<div id="goldenRune"></div>
+							</div>
+						</div>
+
+						<div class="rune-video-player">
+							<iframe src="https://www.youtube.com/embed/qw1VFWuE-IA?si=dVlohnWeuxF30bO2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							<!-- <button class="play"><img src="img/icons/play.png" alt="Play"></button> -->
+						</div>
+
+					</div>
+				</div>
+
 			</div>
 
 		</section>
@@ -174,6 +218,8 @@
 			</div>
 		</div>
 	</footer>
+
+	<script src="js/app.js"></script>
 
 </body>
 </html>
