--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-	<header class="rune-header">
+	<header class="rune-header" id="runeHeader">
 		<div class="container">
 			<div class="badge">Бесплатно</div>
 			<h1>Онлайн - калькулятор <span><span>расчета рунокода</span></span></h1>
@@ -210,7 +210,7 @@
 						</a>
 					</div>
 
-					<a href="#" class="scroll-top">
+					<a href="#runeHeader" class="scroll-top">
 						<img src="img/icons/arrow-up.svg" alt="Scroll Top" />
 					</a>
 
@@ -219,6 +219,7 @@
 		</div>
 	</footer>
 
+	<script src="js/calc.js"></script>
 	<script src="js/app.js"></script>
 
 </body>
