upd mobile version

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 					<div class="rune-calc-section-descr">
 
-						<p class="rune-calc-section-descr-title">Три руны символизируют судьбоносные жизненные<br/> параметры (константы), как основу личного вирда.</p>
+						<p class="rune-calc-section-descr-title">Три руны символизируют судьбоносные жизненные параметры (константы), как основу личного вирда.</p>
 
 						<div class="rune-calc-section-descr-item">
 							<h3>Первая позиция в рунокоде</h3>
